--- a/assets/log.header.html
+++ b/assets/log.header.html
@@ -161,7 +161,7 @@
         cursor: pointer;
     }
 </style>
-<script>
+<script type="text/javascript">
     function doLink(url) {
         if (confirm('Open \'' + url + '\'?') === true)
             window.open(encodeURI(url), '_blank');
